--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.11.6",
         "@vitejs/plugin-react": "^4.2.1",
         "axios": "^1.6.4",
+        "bootstrap": "^5.3",
+        "jquery": "^3.6.3",
         "laravel-vite-plugin": "^1.0",
-        "vite": "^5.0",
+        "moment": "^2.29.2",
         "react": "^18.3.1",
         "react-bootstrap": "^2.7",
         "react-dom": "^18.0.0",
@@ -21,9 +24,6 @@
         "redux": "^4.1.2",
         "redux-thunk": "^2.3.0",
         "sass": "^1.32.11",
-        "moment": "^2.29.2",
-        "bootstrap": "^5.3",
-        "jquery": "^3.6.3",
-        "@popperjs/core": "^2.11.6"
+        "vite": "^5.0"
     }
 }
