Send users to Stripe Checkout page

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,10 @@ APP_DEBUG=true
 APP_TIMEZONE=Europe/London
 APP_URL=http://parlour.test
 
+STRIPE_SK=
+STRIPE_PK=
+STRIPE_WEBHOOK_SECRET=
+
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_GB
@@ -30,7 +34,8 @@ SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
-SESSION_DOMAIN=null
+SESSION_DOMAIN=localhost
+SANCTUM_STATEFUL_DOMAINS=localhost
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
