--- a/.env.example
+++ b/.env.example
@@ -34,8 +34,9 @@ SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
-SESSION_DOMAIN=localhost
+SESSION_DOMAIN=null
 SANCTUM_STATEFUL_DOMAINS=localhost
+SESSION_COOKIE=7910be0aabc1eb8a447
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
